syntax = "proto3";
package com.vang;
option java_package = "com.vang.api_gateway.grpc.generated";
option java_multiple_files = true;
option java_outer_classname = "GatewayServer";

service GetUsernameStore {
  rpc getStoreData(GetUsernameStoreRequest) returns (GetUsernameStoreReply);
}

message GetUsernameStoreRequest {
  int32 type = 32;
}

message GetUsernameStoreReply {
  bool status = 1;
  string username = 2;
}